# ksp-mission-control

./: .gitignore  CLAUDE.md  LICENSE  README.md  flight_logs.xml  pyproject.toml
.claude/: settings.json
adr/: 0001-python-textual-tui.md  0002-krpc-game-bridge.md  0003-uv-package-manager.md  0004-protocol-based-client.md  0005-tdd-workflow.md  0006-action-execution-system.md  0007-screen-session-pattern.md  0008-vessel-state-naming-convention.md  0009-action-lifecycle-contract.md  0010-vocabulary-and-verbs.md  0011-atomic-actions-and-wait-for.md  0012-warp-handling-in-actions.md
crafts/: fart-0.craft  fart-1.craft  fart-2.craft  fart-3.craft
docs/: action-system-plan.md
hooks/: pre-commit
plans/: altitude-steps.plan  first-science-flight.plan  hover-and-land.plan  square-patrol.plan
scripts/: dump_parachute_fields.py
tests/: conftest.py  test_action_base.py  test_action_picker.py  test_action_runner.py  test_align_plane_action.py  test_autopilot_action.py  test_autopilot_config_action.py  test_change_apse_action.py  test_check_runner.py  test_checks.py  test_circularize_action.py  test_command_history.py  test_config.py  test_confirm_exit_dialog.py  test_control_panel.py  test_control_screen.py  test_control_session.py  test_controllability_test_action.py  test_controls_helper.py  test_craft.py  test_debug_console.py  test_deorbit_to_target_action.py  test_detector.py  test_flight_plan.py  test_flight_plan_picker.py  test_hold_attitude_action.py  test_hover_action.py  test_impact_prediction.py  test_installer.py  test_krpc_bridge.py  test_land_action.py  (+27 more)
(+132 files in other folders)
