[project]
name = "ksp-mission-control"
version = "0.1.0"
description = "Terminal mission control console for Kerbal Space Program via kRPC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "krpc>=0.5.4",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15",
]

[project.scripts]
ksp-mc = "ksp_mission_control.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksp_mission_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ksp_mission_control"]
mypy_path = ["src"]
